# CerberusGran

./: .gitignore  Demo_Interface1.maxpat  README.md  RealTime_Grains_GUI_design.maxpat
.claude/skills/gui-design/: SKILL.md
CerberusGran/: CMakeLists.txt  CmakeLists.txt
CerberusGran/Source/: AudioSampleLoader.cpp  AudioSampleLoader.h  Bitcrusher.h  CerberusLookAndFeel.h  CombFilter.h  EngineColumn.h  FXChainPanel.h  FXSlotCard.h  FilterResponseDisplay.h  GlobalBar.h  Grain.h  GrainEngine.cpp  GrainEngine.h  GrainHead.cpp  GrainHead.h  GrainShapeKnob.h  HeadFXChain.h  HeadFilter.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  RotaryKnob.h  WaveformDisplay.h  WaveformDropComponent.cpp  WaveformDropComponent.h  WindowFunctions.h
CerberusGran/Source/Modulation/: LFO.h  ModulationEngine.h  StepSequencer.h
CerberusGran/Source/UI/: AdvancedPanel.h  LFOPanel.h  StepSequencerPanel.h
